# libsga

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO  appveyor.yml  circle.yml
.circleci/: config.yml
.circleci/image/: Dockerfile
cmake/: COPYRIGHT.txt  FindVulkan.cmake  Findassimp.cmake
doc/: CMakeLists.txt  Doxyfile.in  pages.txt.in
examples/: CMakeLists.txt  README.md
examples/common/: common.hpp  sceneloader.hpp  stb_image.h
examples/cube/: main.cpp
examples/data/: LICENSE  thepit.hdr
examples/data/castle-on-hills/: LICENSE
examples/data/open_sans/: COPYRIGHT
examples/data/sponza/: copyright.txt  sponza.mtl
examples/data/stitch/: rainbow.json  stata.json
examples/data/teapot/: teapot-smooth.mtl
examples/deferred/: main.cpp
examples/fragTest1/: main.cpp
examples/greet/: main.cpp
examples/ibo/: main.cpp
examples/image/: main.cpp
examples/image2/: main.cpp
examples/model/: main.cpp
examples/pipeline/: main.cpp
examples/sampler/: main.cpp
examples/shadertoy/: main.cpp
examples/shadertoy_julia/: main.cpp
examples/shadowmap/: main.cpp  model.frag  model.vert  preview.frag
examples/sponza/: main.cpp  model.frag  preview.frag  shadow.frag
examples/sponza-shadowmap/: main.cpp  model.frag  model.vert
examples/ssaa/: main.cpp
examples/stitch/: main.cpp
examples/teapot/: main.cpp
examples/text/: main.cpp
examples/textureTarget/: main.cpp
examples/triangle/: main.cpp
examples/twoOffscreenPipelines/: main.cpp
examples/unwrap-envmap/: main.cpp
examples/vbo/: main.cpp
examples/window/: main.cpp
include/: sga.hpp
include/sga/: config.hpp  config.hpp.in  exceptions.hpp  image.hpp  keys.hpp  layout.hpp  pipeline.hpp  pipeline.uniforms.inc  shader.hpp  utils.hpp  vbo.hpp  window.hpp
release/: release-linux.sh  release-windows.ps  release-windows.ps1
samples/: CMakeLists.txt
src/: CMakeLists.txt  global.cpp  image.cpp  image.glue.cpp  keys.cpp  layout.cpp  pipeline.cpp  pipeline.glue.cpp  scheduler.cpp  shader.cpp  shader.glue.cpp  stbi.cpp  utils.cpp  vbo.cpp  vbo.glue.cpp  window.cpp
src/include/: global.hpp  image.impl.hpp  layout.hpp  pipeline.impl.hpp  scheduler.hpp  shader.impl.hpp  stbi.hpp  utils.hpp  vbo.impl.hpp  version.hpp.in  window.impl.hpp
vkhlf/: CMakeLists.txt  Config.h  FramebufferSwapchain.h  Swapchain.h
vkhlf/src/: CommandBuffer.cpp  FramebufferSwapchain.cpp  Swapchain.cpp
